--- a/assets/main.css
+++ b/assets/main.css
@@ -201,10 +201,10 @@
          column-gap: 11px;
   }
 }
-.template--product-Yonder-dev .product-info .product_buy_form_wrapper .container_buy_box buy-buttons {
+.template--product-Yonder-dev .product-info .product_buy_form_wrapper .container_buy_box buy-buttons-custom {
   flex: 1;
 }
-.template--product-Yonder-dev .product-info .product_buy_form_wrapper .container_buy_box buy-buttons button[type=submit] {
+.template--product-Yonder-dev .product-info .product_buy_form_wrapper .container_buy_box buy-buttons-custom button[type=submit] {
   color: #FFF;
   text-align: center;
   font-family: Nunito Sans;
@@ -220,17 +220,17 @@
   padding-bottom: 13px;
 }
 @media screen and (max-width: 999px) {
-  .template--product-Yonder-dev .product-info .product_buy_form_wrapper .container_buy_box buy-buttons button[type=submit] {
+  .template--product-Yonder-dev .product-info .product_buy_form_wrapper .container_buy_box buy-buttons-custom button[type=submit] {
     -moz-column-gap: 6px;
          column-gap: 6px;
     padding-left: 10px;
     padding-right: 10px;
   }
 }
-.template--product-Yonder-dev .product-info .product_buy_form_wrapper .container_buy_box buy-buttons button[type=submit]:hover {
+.template--product-Yonder-dev .product-info .product_buy_form_wrapper .container_buy_box buy-buttons-custom button[type=submit]:hover {
   color: #1C1C1C;
 }
-.template--product-Yonder-dev .product-info .product_buy_form_wrapper .container_buy_box buy-buttons .price-list--product sale-price {
+.template--product-Yonder-dev .product-info .product_buy_form_wrapper .container_buy_box buy-buttons-custom .price-list--product sale-price {
   color: inherit;
   text-align: center;
   font-family: Nunito Sans;
@@ -241,7 +241,7 @@
   letter-spacing: 1.4px;
   text-transform: uppercase;
 }
-.template--product-Yonder-dev .product-info .product_buy_form_wrapper .container_buy_box buy-buttons .price-list--product compare-at-price {
+.template--product-Yonder-dev .product-info .product_buy_form_wrapper .container_buy_box buy-buttons-custom .price-list--product compare-at-price {
   display: none;
 }
 .template--product-Yonder-dev .product-info .product_buy_form_wrapper .container_buy_box quantity-selector {
@@ -423,6 +423,7 @@
 }
 .template--product-Yonder-dev .product-info .product-personalizer .mains-wrapper .pplr-wrapper .key_layout {
   bottom: 0px;
+  visibility: hidden;
 }
 .template--product-Yonder-dev .product-info .product-personalizer .mains-wrapper .pplr-wrapper .pplr-character-count {
   padding: 0px;
@@ -710,105 +711,80 @@
 }
 
 .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=title-with-rating] {
-  -webkit-margin-after: 0.813rem;
-          margin-block-end: 0.813rem;
+  margin-block-end: 0.813rem;
 }
 @media screen and (max-width: 999px) {
   .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=title-with-rating] {
-    -webkit-margin-after: 1.188rem;
-            margin-block-end: 1.188rem;
+    margin-block-end: 1.188rem;
   }
 }
 .template--product-Yonder-dev .product-info__block-list .product-info-type-text:nth-child(-n+2) {
-  -webkit-margin-before: 0rem;
-          margin-block-start: 0rem;
-  -webkit-margin-after: 1.063rem;
-          margin-block-end: 1.063rem;
+  margin-block-start: 0rem;
+  margin-block-end: 1.063rem;
 }
 @media screen and (max-width: 999px) {
   .template--product-Yonder-dev .product-info__block-list .product-info-type-text:nth-child(-n+2) {
-    -webkit-margin-after: 1.063rem;
-            margin-block-end: 1.063rem;
+    margin-block-end: 1.063rem;
   }
 }
 .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=price] {
-  -webkit-margin-before: 0rem;
-          margin-block-start: 0rem;
-  -webkit-margin-after: 1.25rem;
-          margin-block-end: 1.25rem;
+  margin-block-start: 0rem;
+  margin-block-end: 1.25rem;
 }
 @media screen and (max-width: 999px) {
   .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=price] {
-    -webkit-margin-after: 1.375rem;
-            margin-block-end: 1.375rem;
+    margin-block-end: 1.375rem;
   }
 }
 .template--product-Yonder-dev .product-info__block-list .product-info-type-text:nth-child(even) {
-  -webkit-margin-before: 0rem;
-          margin-block-start: 0rem;
-  -webkit-margin-after: 1.75rem;
-          margin-block-end: 1.75rem;
+  margin-block-start: 0rem;
+  margin-block-end: 1.75rem;
 }
 @media screen and (max-width: 999px) {
   .template--product-Yonder-dev .product-info__block-list .product-info-type-text:nth-child(even) {
-    -webkit-margin-after: 1.375rem;
-            margin-block-end: 1.375rem;
+    margin-block-end: 1.375rem;
   }
 }
 .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=product-variations] {
-  -webkit-margin-before: 0rem;
-          margin-block-start: 0rem;
-  -webkit-margin-after: 1.625rem;
-          margin-block-end: 1.625rem;
+  margin-block-start: 0rem;
+  margin-block-end: 1.625rem;
 }
 @media screen and (max-width: 999px) {
   .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=product-variations] {
-    -webkit-margin-after: 1.188rem;
-            margin-block-end: 1.188rem;
+    margin-block-end: 1.188rem;
   }
 }
 .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=buy-buttons-with-quantity] {
-  -webkit-margin-before: 0rem;
-          margin-block-start: 0rem;
-  -webkit-margin-after: 2.25rem;
-          margin-block-end: 2.25rem;
+  margin-block-start: 0rem;
+  margin-block-end: 2.25rem;
 }
 .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=buy-buttons-with-quantity] .scroll-customize-wrapper-mrb {
-  -webkit-margin-after: 1.438rem;
-          margin-block-end: 1.438rem;
+  margin-block-end: 1.438rem;
 }
 @media screen and (max-width: 999px) {
   .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=buy-buttons-with-quantity] {
-    -webkit-margin-after: 2.188rem;
-            margin-block-end: 2.188rem;
+    margin-block-end: 2.188rem;
   }
   .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=buy-buttons-with-quantity] .scroll-customize-wrapper-mrb {
-    -webkit-margin-after: 1.563rem;
-            margin-block-end: 1.563rem;
+    margin-block-end: 1.563rem;
   }
 }
 .template--product-Yonder-dev .product-info__block-list .block-product-feature_with_icon_v2 {
-  -webkit-margin-before: 0rem;
-          margin-block-start: 0rem;
-  -webkit-margin-after: 2.313rem;
-          margin-block-end: 2.313rem;
+  margin-block-start: 0rem;
+  margin-block-end: 2.313rem;
 }
 @media screen and (max-width: 999px) {
   .template--product-Yonder-dev .product-info__block-list .block-product-feature_with_icon_v2 {
-    -webkit-margin-after: 2.063rem;
-            margin-block-end: 2.063rem;
+    margin-block-end: 2.063rem;
   }
 }
 .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=accordion-group] {
-  -webkit-margin-before: 0rem;
-          margin-block-start: 0rem;
-  -webkit-margin-after: 2.05rem;
-          margin-block-end: 2.05rem;
+  margin-block-start: 0rem;
+  margin-block-end: 2.05rem;
 }
 @media screen and (max-width: 999px) {
   .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=accordion-group] {
-    -webkit-margin-after: 2.05rem;
-            margin-block-end: 2.05rem;
+    margin-block-end: 2.05rem;
   }
 }
 @media screen and (min-width: 1000px) {
@@ -820,7 +796,7 @@
     /* Hide bottom shadow when not at the bottom */
   }
   .template--product-Yonder-dev .product-gallery__thumbnail-list product-gallery-navigaion-scroller {
-    row-gap: 10px;
+    row-gap: 20px;
   }
   .template--product-Yonder-dev .product-gallery__thumbnail-list::before {
     content: "";
@@ -836,7 +812,7 @@
   .template--product-Yonder-dev .product-gallery__thumbnail-list::after {
     content: "";
     position: absolute;
-    bottom: 0;
+    bottom: -2px;
     left: 0;
     right: 0;
     height: 50px; /* Set the desired shadow height */
@@ -919,8 +895,7 @@ scroll-wrapper-slider.without-scroll .inner_container_items::-webkit-scrollbar {
   }
 }
 .multi-column-with-text-v2 .main-stack-container .section-header .prose p {
-  -webkit-margin-before: 1rem;
-          margin-block-start: 1rem;
+  margin-block-start: 1rem;
   color: #343434;
   text-align: center;
   font-family: Nunito Sans;
@@ -974,8 +949,7 @@ scroll-wrapper-slider.without-scroll .inner_container_items::-webkit-scrollbar {
   }
 }
 .multi-column-with-text-v2 .main-stack-container .multi-column__item .text-part .content-part {
-  -webkit-margin-before: 0.688rem;
-          margin-block-start: 0.688rem;
+  margin-block-start: 0.688rem;
 }
 .multi-column-with-text-v2 .main-stack-container .multi-column__item .text-part .content-part p {
   color: #343434;
@@ -1031,8 +1005,7 @@ scroll-wrapper-slider.without-scroll .inner_container_items::-webkit-scrollbar {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  -webkit-margin-before: 1.5rem;
-          margin-block-start: 1.5rem;
+  margin-block-start: 1.5rem;
 }
 @media screen and (max-width: 769px) {
   .shopify-section--text-with-icons-v2 .section-header .prose p {
@@ -1070,18 +1043,14 @@ scroll-wrapper-slider.without-scroll .inner_container_items::-webkit-scrollbar {
   border-radius: 22px;
   border: 1px solid #343434;
   background: #EFEFEF;
-  -webkit-padding-before: 2.563rem;
-          padding-block-start: 2.563rem;
-  -webkit-padding-after: 2rem;
-          padding-block-end: 2rem;
+  padding-block-start: 2.563rem;
+  padding-block-end: 2rem;
 }
 @media screen and (max-width: 769px) {
   .shopify-section--text-with-icons-v2 .text-with-icons .text-with-icons__item {
     min-width: initial;
-    -webkit-padding-before: 2.563rem;
-            padding-block-start: 2.563rem;
-    -webkit-padding-after: 2rem;
-            padding-block-end: 2rem;
+    padding-block-start: 2.563rem;
+    padding-block-end: 2rem;
   }
 }
 .shopify-section--text-with-icons-v2 .text-with-icons .text-with-icons__item .constrained-image {
@@ -1146,14 +1115,12 @@ scroll-wrapper-slider.without-scroll .inner_container_items::-webkit-scrollbar {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  -webkit-margin-before: 1.5rem;
-          margin-block-start: 1.5rem;
+  margin-block-start: 1.5rem;
 }
 @media screen and (max-width: 769px) {
   .comparatif-table-section .section-header .prose p {
     font-size: 16px;
-    -webkit-margin-before: 1rem;
-            margin-block-start: 1rem;
+    margin-block-start: 1rem;
   }
 }
 .comparatif-table-section .section-header .prose h2 {
