--- a/snippets/button.liquid
+++ b/snippets/button.liquid
@@ -70,7 +70,7 @@ Supported variables
 
   capture attributes
     if class_attribute != blank
-      echo 'class="' | append: class_attribute | append: '"'
+      echo 'class=" ptwAddToCart ' | append: class_attribute | append: '"'
     endif
 
     if style_attribute != blank
