--- a/snippets/buy-buttons-with-quantity.liquid
+++ b/snippets/buy-buttons-with-quantity.liquid
@@ -79,7 +79,7 @@ Supported variables
               {% render 'quantity-selector', variant: product.selected_or_first_available_variant, form: product_form_id %}
             {%- endif -%}
     
-          <buy-buttons class="buy-buttons {% if show_payment_button %}buy-buttons--has-dynamic{% endif %}" template="{{ product.template_suffix | escape }}" form="{{ form_id }}">
+          <buy-buttons-custom class="buy-buttons {% if show_payment_button %}buy-buttons--has-dynamic{% endif %}" template="{{ product.template_suffix | escape }}" form="{{ form_id }}">
             {%- if show_payment_button and atc_button_background == blank and atc_button_text_color == blank -%}
               {%- assign atc_button_style = 'outline' -%}
             {%- else -%}
@@ -106,7 +106,7 @@ Supported variables
                 }
               </style>
             {%- endif -%}
-          </buy-buttons>
+          </buy-buttons-custom>
           </div>
         </div>
       {%- endform -%}
