--- a/src/scss/views/pdp.scss
+++ b/src/scss/views/pdp.scss
@@ -209,7 +209,7 @@
           column-gap: 11px;
         }
         flex-direction: row-reverse;
-        buy-buttons{
+        buy-buttons-custom{
           flex: 1;
           button[type="submit"]{
             color: #FFF;
@@ -422,9 +422,12 @@
             height: 28px;
             font-size: 25px;
             justify-content: center;
+            
+            
           }
           .key_layout{
             bottom: 0px;
+            visibility: hidden;
           }
           .pplr-character-count{
             padding: 0px;
@@ -802,7 +805,7 @@
     //product thummbnails 
     .product-gallery__thumbnail-list {
       product-gallery-navigaion-scroller{
-        row-gap: 10px;
+        row-gap: 20px;
       }
     }
     .product-gallery__thumbnail-list::before {
@@ -821,7 +824,7 @@
     .product-gallery__thumbnail-list::after {
       content: '';
       position: absolute;
-      bottom: 0;
+      bottom: -2px;
       left: 0;
       right: 0;
       height: 50px; /* Set the desired shadow height */
