--- a/assets/main.css
+++ b/assets/main.css
@@ -711,80 +711,105 @@
 }
 
 .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=title-with-rating] {
-  margin-block-end: 0.813rem;
+  -webkit-margin-after: 0.813rem;
+          margin-block-end: 0.813rem;
 }
 @media screen and (max-width: 999px) {
   .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=title-with-rating] {
-    margin-block-end: 1.188rem;
+    -webkit-margin-after: 1.188rem;
+            margin-block-end: 1.188rem;
   }
 }
 .template--product-Yonder-dev .product-info__block-list .product-info-type-text:nth-child(-n+2) {
-  margin-block-start: 0rem;
-  margin-block-end: 1.063rem;
+  -webkit-margin-before: 0rem;
+          margin-block-start: 0rem;
+  -webkit-margin-after: 1.063rem;
+          margin-block-end: 1.063rem;
 }
 @media screen and (max-width: 999px) {
   .template--product-Yonder-dev .product-info__block-list .product-info-type-text:nth-child(-n+2) {
-    margin-block-end: 1.063rem;
+    -webkit-margin-after: 1.063rem;
+            margin-block-end: 1.063rem;
   }
 }
 .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=price] {
-  margin-block-start: 0rem;
-  margin-block-end: 1.25rem;
+  -webkit-margin-before: 0rem;
+          margin-block-start: 0rem;
+  -webkit-margin-after: 1.25rem;
+          margin-block-end: 1.25rem;
 }
 @media screen and (max-width: 999px) {
   .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=price] {
-    margin-block-end: 1.375rem;
+    -webkit-margin-after: 1.375rem;
+            margin-block-end: 1.375rem;
   }
 }
 .template--product-Yonder-dev .product-info__block-list .product-info-type-text:nth-child(even) {
-  margin-block-start: 0rem;
-  margin-block-end: 1.75rem;
+  -webkit-margin-before: 0rem;
+          margin-block-start: 0rem;
+  -webkit-margin-after: 1.75rem;
+          margin-block-end: 1.75rem;
 }
 @media screen and (max-width: 999px) {
   .template--product-Yonder-dev .product-info__block-list .product-info-type-text:nth-child(even) {
-    margin-block-end: 1.375rem;
+    -webkit-margin-after: 1.375rem;
+            margin-block-end: 1.375rem;
   }
 }
 .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=product-variations] {
-  margin-block-start: 0rem;
-  margin-block-end: 1.625rem;
+  -webkit-margin-before: 0rem;
+          margin-block-start: 0rem;
+  -webkit-margin-after: 1.625rem;
+          margin-block-end: 1.625rem;
 }
 @media screen and (max-width: 999px) {
   .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=product-variations] {
-    margin-block-end: 1.188rem;
+    -webkit-margin-after: 1.188rem;
+            margin-block-end: 1.188rem;
   }
 }
 .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=buy-buttons-with-quantity] {
-  margin-block-start: 0rem;
-  margin-block-end: 2.25rem;
+  -webkit-margin-before: 0rem;
+          margin-block-start: 0rem;
+  -webkit-margin-after: 2.25rem;
+          margin-block-end: 2.25rem;
 }
 .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=buy-buttons-with-quantity] .scroll-customize-wrapper-mrb {
-  margin-block-end: 1.438rem;
+  -webkit-margin-after: 1.438rem;
+          margin-block-end: 1.438rem;
 }
 @media screen and (max-width: 999px) {
   .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=buy-buttons-with-quantity] {
-    margin-block-end: 2.188rem;
+    -webkit-margin-after: 2.188rem;
+            margin-block-end: 2.188rem;
   }
   .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=buy-buttons-with-quantity] .scroll-customize-wrapper-mrb {
-    margin-block-end: 1.563rem;
+    -webkit-margin-after: 1.563rem;
+            margin-block-end: 1.563rem;
   }
 }
 .template--product-Yonder-dev .product-info__block-list .block-product-feature_with_icon_v2 {
-  margin-block-start: 0rem;
-  margin-block-end: 2.313rem;
+  -webkit-margin-before: 0rem;
+          margin-block-start: 0rem;
+  -webkit-margin-after: 2.313rem;
+          margin-block-end: 2.313rem;
 }
 @media screen and (max-width: 999px) {
   .template--product-Yonder-dev .product-info__block-list .block-product-feature_with_icon_v2 {
-    margin-block-end: 2.063rem;
+    -webkit-margin-after: 2.063rem;
+            margin-block-end: 2.063rem;
   }
 }
 .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=accordion-group] {
-  margin-block-start: 0rem;
-  margin-block-end: 2.05rem;
+  -webkit-margin-before: 0rem;
+          margin-block-start: 0rem;
+  -webkit-margin-after: 2.05rem;
+          margin-block-end: 2.05rem;
 }
 @media screen and (max-width: 999px) {
   .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=accordion-group] {
-    margin-block-end: 2.05rem;
+    -webkit-margin-after: 2.05rem;
+            margin-block-end: 2.05rem;
   }
 }
 @media screen and (min-width: 1000px) {
@@ -895,7 +920,8 @@ scroll-wrapper-slider.without-scroll .inner_container_items::-webkit-scrollbar {
   }
 }
 .multi-column-with-text-v2 .main-stack-container .section-header .prose p {
-  margin-block-start: 1rem;
+  -webkit-margin-before: 1rem;
+          margin-block-start: 1rem;
   color: #343434;
   text-align: center;
   font-family: Nunito Sans;
@@ -949,7 +975,8 @@ scroll-wrapper-slider.without-scroll .inner_container_items::-webkit-scrollbar {
   }
 }
 .multi-column-with-text-v2 .main-stack-container .multi-column__item .text-part .content-part {
-  margin-block-start: 0.688rem;
+  -webkit-margin-before: 0.688rem;
+          margin-block-start: 0.688rem;
 }
 .multi-column-with-text-v2 .main-stack-container .multi-column__item .text-part .content-part p {
   color: #343434;
@@ -1005,7 +1032,8 @@ scroll-wrapper-slider.without-scroll .inner_container_items::-webkit-scrollbar {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  margin-block-start: 1.5rem;
+  -webkit-margin-before: 1.5rem;
+          margin-block-start: 1.5rem;
 }
 @media screen and (max-width: 769px) {
   .shopify-section--text-with-icons-v2 .section-header .prose p {
@@ -1039,18 +1067,21 @@ scroll-wrapper-slider.without-scroll .inner_container_items::-webkit-scrollbar {
   }
 }
 .shopify-section--text-with-icons-v2 .text-with-icons .text-with-icons__item {
-  min-width: 21.875rem;
   border-radius: 22px;
   border: 1px solid #343434;
   background: #EFEFEF;
-  padding-block-start: 2.563rem;
-  padding-block-end: 2rem;
+  -webkit-padding-before: 2.563rem;
+          padding-block-start: 2.563rem;
+  -webkit-padding-after: 2rem;
+          padding-block-end: 2rem;
 }
 @media screen and (max-width: 769px) {
   .shopify-section--text-with-icons-v2 .text-with-icons .text-with-icons__item {
     min-width: initial;
-    padding-block-start: 2.563rem;
-    padding-block-end: 2rem;
+    -webkit-padding-before: 2.563rem;
+            padding-block-start: 2.563rem;
+    -webkit-padding-after: 2rem;
+            padding-block-end: 2rem;
   }
 }
 .shopify-section--text-with-icons-v2 .text-with-icons .text-with-icons__item .constrained-image {
@@ -1115,12 +1146,14 @@ scroll-wrapper-slider.without-scroll .inner_container_items::-webkit-scrollbar {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  margin-block-start: 1.5rem;
+  -webkit-margin-before: 1.5rem;
+          margin-block-start: 1.5rem;
 }
 @media screen and (max-width: 769px) {
   .comparatif-table-section .section-header .prose p {
     font-size: 16px;
-    margin-block-start: 1rem;
+    -webkit-margin-before: 1rem;
+            margin-block-start: 1rem;
   }
 }
 .comparatif-table-section .section-header .prose h2 {
@@ -1302,17 +1335,9 @@ scroll-wrapper-slider.without-scroll .inner_container_items::-webkit-scrollbar {
 .comparatif-table-section .comparison-table td {
   padding: 1rem;
   color: #1C1C1C;
-  font-family: Nunito Sans;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 34.803px; /* 174.014% */
-  text-transform: uppercase;
 }
 @media only screen and (max-width: 990px) {
   .comparatif-table-section .comparison-table td {
-    font-size: 15px;
-    line-height: normal;
     width: 6rem;
   }
 }
@@ -1349,6 +1374,6 @@ scroll-wrapper-slider.without-scroll .inner_container_items::-webkit-scrollbar {
   }
   .comparatif-table-section .comparison-table th,
   .comparatif-table-section .comparison-table td {
-    padding: 1rem 1.3rem 1rem 1.5rem;
+    padding: 0.8rem 1.3rem 0.8rem 1.5rem;
   }
 }
