--- a/src/scss/components/icon-with-text.scss
+++ b/src/scss/components/icon-with-text.scss
@@ -55,7 +55,7 @@
 
     .text-with-icons{
         .text-with-icons__item{
-            min-width: 21.875rem;
+            //min-width: 21.875rem;
             border-radius: 22px;
             border: 1px solid #343434;
             background: #EFEFEF;
