--- a/assets/custom-sections.js.liquid
+++ b/assets/custom-sections.js.liquid
@@ -89,7 +89,7 @@ customElements.define("wraping-container", WrappingContainer);
 class FormWrappingContainer extends HTMLElement {
   constructor() {
     super();
-  }
+      }
 
   connectedCallback() {
     const observerCallback = (mutationsList, observer) => {
@@ -121,6 +121,7 @@ class FormWrappingContainer extends HTMLElement {
   }
 
   loadThirdPartyApp() {
+    setTimeout(()=>{
     //this for wrappe it inside a tag 
     if(!this.querySelector('product-personalizer-wrapper')){
       // Step 1: Select the div element with the "product-personalizer" class
@@ -149,6 +150,7 @@ class FormWrappingContainer extends HTMLElement {
         }
       }
     }
+  },300)
   }
 }
 
@@ -206,26 +208,6 @@ class ProductPersonalizerWrapper extends HTMLElement {
               if (cloneDiv.querySelector('.oindexlabel'))
                 cloneDiv.querySelector('input[type="text"]').name=`properties[${cloneDiv.querySelector('.oindexlabel').textContent}]`
             }
-            //hide the scond point
-            if (cloneDiv.getAttribute('data-main') == '3') {
-              cloneDiv.style.display="none"
-              // Find the div with data-main="1"
-              let wrapper = this.querySelector('div[data-main="1"]');
-
-              // Find the checkbox element inside the wrapper
-              let checkbox = wrapper.querySelector('input[type="checkbox"]');
-
-              // Add an event listener to the checkbox
-              checkbox.addEventListener('change', function () {
-                if (checkbox.checked) {
-                  // The checkbox is checked
-                  cloneDiv.style.display="flex"
-                } else {
-                  // The checkbox is unchecked
-                  cloneDiv.style.display="none"
-                }
-              });
-            }
             // Get all the span elements inside the key_layout div
             const spanElements = cloneDiv.querySelectorAll('.key_layout span');
 
@@ -264,7 +246,6 @@ class ProductPersonalizerWrapper extends HTMLElement {
     },300)
   }
 }
-
 customElements.define('product-personalizer-wrapper', ProductPersonalizerWrapper);
 
 // scroll slider container
