--- a/snippets/price-list.liquid
+++ b/snippets/price-list.liquid
@@ -34,7 +34,7 @@ Supported variables
 
     when 'product'
       assign regular_price_classes = base_text_class | append: 'h4 text-subdued'
-      assign on_sale_price_classes = base_text_class | append: 'h4 text-on-sale'
+      assign on_sale_price_classes = base_text_class | append: 'h4 text-on-sale ProductMeta__Price'
       assign compare_at_price_classes = base_text_class | append: 'h5 text-subdued line-through'
       assign unit_price_classes = base_text_class | append: 'h6 text-subdued'
   endcase
